<resources>
    <string name="app_name">MyQuizzler</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="bookmark">Bookmark</string>
    <string name="myquizzler">MyQuizzler</string>
    <string name="sets">Sets</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="_5_10">5/10</string>
    <string name="retry">Retry</string>
    <string name="internetmsg">You have to turned on the Internet.</string>
</resources>
